Amélioration de l'interface du plugin d'import FFTA Ajout du blason tri spot 60cm